<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Escape IR</string>
    <string name="usuario">Usuario</string>
    <string name="user_invalid">Introduce un usuario válido</string>
    <string name="enter">Entrar</string>
    <string name="escape">Escape</string>
    <string name="ir">IR</string>
    <string name="your_time">Tu tiempo</string>
    <string name="time">Tiempo</string>
    <string name="button_pause">Pausa</string>
    <string name="primero">1r</string>
    <string name="segundo">2n</string>
    <string name="tercero">3r</string>
    <string name="loading">Cargando datos. Porfavor espere</string>
    
    
    <!-- Buttons -->
    <string name="empezar">Empezar</string>
    <string name="kitchen">COCINA</string>
    <string name="classroom">AULA</string>
    <string name="ranking">Ranking</string>
    <string name="help">Ayuda</string>
    
    <!-- Arrays -->
    <string-array name="reference_kitchen">
		<item>coke</item>
		<item>knife</item>
		<item>microwave</item>
		<item>door</item>
    </string-array>
    <string-array name="reference_classroom">
        <item>switch</item>
        <item>closet</item>
        <item>plug</item>
        <item>poster</item>
        <item>keyboard</item>
    </string-array>
        
    <string-array name="reference_prueba">
		<item>lenovo</item>
		<item>android</item>
		<item>jake</item>
    </string-array>

    <!-- guide -->
    <string name="intro_classroom">Me he vuelto a quedar dormido!?</string>
    <string name="intro_body_classroom">Pero esta vez es diferente, esta vez me han dejado solo!! no hay nadie y esta todo apagado, 
ademas han puesto una contraseña a la puerta? cuando han hecho este cambio? habra que buscar la contraseña pero asi no se ve nada...
		</string>
    <string-array name="guide_classroom">
		<item>no veo nada, necesito luz</item>
		<item>podria estar cerca del ordenador</item>
		<item>conectarlo a la corriente y listo</item>
		<item>este cuadro tiene algo raro...</item>
		<item>y donde lo pongo?</item>
    </string-array>
    <string-array name="reward_classroom">
		<item>el ordenador del profe! pero le falta algo...</item>
		<item>ya tengo el cargador! falta enchufarlo</item>
		<item>me pide contraseña? esto es nuevo</item>
		<item>perfecto! solo lo falta introducirlo</item>
		<item>La puerta se ha abierto! la próxima vez no me dormiré...</item>
    </string-array>
</resources>