<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#33B5E5"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/layout_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true" >

        <ImageView
            android:src="@drawable/imago_512"
            android:layout_centerInParent="true"
            android:layout_marginTop="30dp"
            android:layout_width="75dp"
            android:layout_height="75dp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_enter_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@id/layout_image"
        android:background="@android:color/white"
        android:orientation="vertical" >


        <EditText
            android:id="@+id/edit_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="10"
            android:textSize="25sp"
            android:hint="@string/usuario"
            android:layout_margin="15dp" />

        <Button
            android:id="@+id/btn_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:background="@drawable/action_enter"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/enter" />
        
          </LinearLayout>
        
        <TextView 
            android:id="@+id/txt_invalid_user"
            android:layout_below="@id/layout_enter_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:text="@string/user_invalid" 
            android:visibility="gone"/>
</RelativeLayout>