<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout    
        android:layout_width="match_parent"
	    android:layout_height="wrap_content">
	    
	    <ImageView 
	        android:id="@+id/img_escape"
	        android:src="@drawable/escape_logo"
	        android:layout_width="75dp"
	        android:layout_height="75dp"
	        android:layout_margin="15dp"
	        android:layout_alignParentTop="true"
	        android:layout_centerInParent="true"/>

	</RelativeLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txt_your_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/your_time"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/time_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/red"
            android:textSize="22sp"
            android:text="00:00"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
		android:gravity="center"
        android:orientation="horizontal" >

	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:gravity="right"
	        android:layout_marginRight="15dp"
	        android:textStyle="bold"
	        android:text="@string/usuario" />

	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	       	android:layout_weight="1"
	       	android:gravity="left"
	       	android:layout_marginLeft="20dp"
	       	android:textStyle="bold"
	        android:text="@string/time" />
    </LinearLayout>
	<ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:dividerHeight="2dp" >
    </ListView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_return"
    		android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentBottom="true"
	        android:layout_margin="15dp"
			android:background="@drawable/action_play"
	        android:drawableLeft="@drawable/play"
			android:textColor="@android:color/white"
	        android:text="volver a jugar"/>
    </RelativeLayout>

</LinearLayout>